--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,6 @@
     <!-- Custom styles for this template -->
     <link href="{{ page.base_url }}custom/css/custom.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ page.base_url }}font-awesome/css/font-awesome.min.css">
-    <!-- <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'> -->
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
@@ -45,6 +44,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="{{ page.base_url }}custom/js/custom.js" type="text/javascript" ></script>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="{{ page.base_url }}dist/js/bootstrap.min.js"></script>
   </body>
