--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -16,7 +16,7 @@
   text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
 }
 
-.jumbotron h1 {
+.jumbotron h1, h5 {
   color: white;
   font-size: 70px;
   font-weight: 300;
