--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -11,7 +11,7 @@
   margin-bottom:0;
 }
 
-.jumbotron .head {
+.jumbotron head {
   color: white;
   text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
   text-align: center;
