--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -4,7 +4,7 @@
   background: linear-gradient(#34495e, #387d98);      /* Dark to med light */ 
   /*background: linear-gradient(#34495e, #1e76b7);*/  /* Dark to light */
   background-size: cover;
-  /*color: #ffffff;*/
+  color: #ffffff;
   /*text-shadow: 2px 2px 3px rgba(0,0,0,0.3);*/
   /*text-align: center;*/
   padding-bottom: 0;
@@ -12,7 +12,7 @@
 }
 
 .jumbotron head {
-  color: white;
+  /*color: white;*/
   text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
   text-align: center;
 }
