--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -6,7 +6,7 @@
   background-size: cover;
   color: #ffffff;
   /*text-shadow: 2px 2px 3px rgba(0,0,0,0.3);*/
-  /*text-align: center;*/
+  text-align: center;
   padding-bottom: 0;
   margin-bottom:0;
 }
@@ -14,7 +14,6 @@
 .jumbotron head {
   /*color: white;*/
   text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
-  text-align: center;
 }
 
 .jumbotron .btn {
@@ -28,6 +27,7 @@
   font-size: 70px;
   font-weight: 300;
 }
+/*****************************************/
 
 .underline-off {
   text-decoration: none !important;
