--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -70,7 +70,7 @@ body {
   padding-top: 50px;
   font-family: "Lato";
   font-weight: 300;
-  font-size: 16px;
+  /*font-size: 16px;*/
   color: #555;
 }
 
