--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -1,29 +1,23 @@
 .jumbotron {
-  /*background: linear-gradient(#1e76b7, #387d98);*/  /* med to light */
-  /*background-color: #34495e;*/                      /* Dark blue */
-  background: linear-gradient(#34495e, #387d98);      /* Dark to med light */ 
-  /*background: linear-gradient(#34495e, #1e76b7);*/  /* Dark to light */
+  background: linear-gradient(#34495e, #387d98);
   background-size: cover;
   color: #ffffff;
-  /*text-shadow: 2px 2px 3px rgba(0,0,0,0.3);*/
   text-align: center;
   padding-bottom: 0;
   margin-bottom:0;
 }
 
-.jumbotron head {
-  /*color: white;*/
+.jumbotron-head {
+  text-align: center;
   text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
 }
 
 .jumbotron .btn {
   font-size: 21px;
   padding: 14px 24px;
-  /*text-shadow: 2px 2px 3px rgba(0,0,0,0.3);*/
 }
 
 .jumbotron h1 {
-/*  color: white;*/
   font-size: 70px;
   font-weight: 300;
 }
@@ -42,7 +36,7 @@
   padding-bottom: 20px;
 }
 
-.shadow-h3 h3 {
+.shadow {
   text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
 }
 
