--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -12,7 +12,7 @@
   text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
 }
 
-.jumbotron .btn {
+.jumbotron .btn-main {
   font-size: 21px;
   padding: 14px 24px;
 }
