--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -43,8 +43,8 @@
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-    color: #333;
+    /*font-weight: 300;*/
+    /*color: #333;*/
 }
 
 /* Custom container */
