updated github url links
updated github links to https://github.com/SMSG-MAC-DEV/MacPatch

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,11 +17,11 @@
         <li><a href="{{ page.base_url }}index.html">{% if page.slug == "home" %}<strong>Home</strong>{% else %}Home{% endif %}</a></li>
         <li{% if page.slug == "gettingstarted" %} class="active"{% endif %}><a href="{{ page.base_url }}gettingstarted.html">Overview</a></li>
         <li{% if page.slug == "documentation" %} class="active"{% endif %}><a href="{{ page.base_url }}documentation.html">Documentation</a></li>
-        <li><a href="https://github.com/macpatch"><i class="fa fa-github fa-lg"></i> </a></li>
+        <li><a href="https://github.com/SMSG-MAC-DEV/MacPatch"><i class="fa fa-github fa-lg"></i> </a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li{% if page.slug == "about" %} class="active"{% endif %}><a href="{{ page.base_url }}about.html">About</a></li>
-        <li{% if page.slug == "contact" %} class="active"{% endif %}><a href="{{ page.base_url }}contact.html">Contact</a></li>
+        <!-- <li{% if page.slug == "about" %} class="active"{% endif %}><a href="{{ page.base_url }}about.html">About</a></li>
+        <li{% if page.slug == "contact" %} class="active"{% endif %}><a href="{{ page.base_url }}contact.html">Contact</a></li> -->
       </ul>
     </div><!--/.nav-collapse -->
   </div>
