--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{{ page.base_url }}font-awesome/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 
     <link href="http://vjs.zencdn.net/4.3/video-js.css" rel="stylesheet">
     <script src="http://vjs.zencdn.net/4.3/video.js"></script>
