--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -43,9 +43,10 @@
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Open Sans', sans-serif;
-    /*font-weight: 300;*/
-    /*color: #333;*/
+  font-family: 'Ubuntu', sans-serif;
+  /*font-family: 'Open Sans', sans-serif;*/
+  /*font-weight: 300;*/
+  /*color: #333;*/
 }
 
 /* Custom container */
@@ -82,6 +83,6 @@ footer {
 }
 
 .centered {
-    float: none;
-    margin: 0 auto;
+  float: none;
+  margin: 0 auto;
 }
