--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -43,7 +43,7 @@
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Ubuntu', sans-serif !important;
   /*font-family: 'Open Sans', sans-serif;*/
   /*font-weight: 300;*/
   /*color: #333;*/
