--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -43,7 +43,6 @@
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Ubuntu', sans-serif !important;
   /*font-family: 'Open Sans', sans-serif;*/
   /*font-weight: 300;*/
   /*color: #333;*/
@@ -64,7 +63,8 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   padding-top: 50px;
-  font-family: "Lato";
+  /*font-family: "Lato";*/
+  font-family: 'Ubuntu', sans-serif;
   font-weight: 300;
   /*font-size: 16px;*/
   color: #555;
