--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -64,7 +64,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
   padding-top: 50px;
   /*font-family: "Lato";*/
-  font-family: 'Ubuntu', sans-serif;
+  /*font-family: 'Ubuntu', sans-serif;*/
   font-weight: 300;
   /*font-size: 16px;*/
   color: #555;
