moved to CDN bootstrap

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <title>{{ title }}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{{ page.base_url }}dist/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
     <link href="{{ page.base_url }}custom/css/custom.css" rel="stylesheet">
@@ -47,6 +47,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{ page.base_url }}custom/js/custom.js" type="text/javascript" ></script>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="{{ page.base_url }}dist/js/bootstrap.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   </body>
 </html>
