--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,7 @@
       <ul class="nav navbar-nav">
         <li{% if page.slug == "getting-started" %} class="active"{% endif %}>
 
-        <li><a href="{{ page.base_url }}index.html">{% if page.slug == "home" %}<strong>Home</strong>{% else %}Home{% endif %}</a></li>
+        <li><a href="{{ page.base_url }}index.html">{% if page.slug == "home" %}<strong><i class="fa fa-home fa-lg"></i></strong>{% else %}<i class="fa fa-home fa-lg"></i>{% endif %}</a></li>
         <li{% if page.slug == "gettingstarted" %} class="active"{% endif %}><a href="{{ page.base_url }}gettingstarted.html">Overview</a></li>
         <li{% if page.slug == "documentation" %} class="active"{% endif %}><a href="{{ page.base_url }}documentation.html">Documentation</a></li>
         <li><a href="https://github.com/SMSG-MAC-DEV/MacPatch"><i class="fa fa-github fa-lg"></i> </a></li>
