--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,10 +12,26 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li{% if page.slug == "home" %} class="active"{% endif %}><a href="{{ page.base_url }}index.html"><i class="fa fa-home fa-lg"> </i></li>
-        <li{% if page.slug == "gettingstarted" %} class="active"{% endif %}><a href="{{ page.base_url }}gettingstarted.html">Overview</a></li>
-        <li{% if page.slug == "documentation" %} class="active"{% endif %}><a href="{{ page.base_url }}documentation.html">Documentation</a></li>
-        <li><a href="https://github.com/SMSG-MAC-DEV/MacPatch"><i class="fa fa-github fa-lg"></i> </a></li>
+        <li{% if page.slug == "home" %} class="active"{% endif %}> 
+          <a href="{{ page.base_url }}index.html"> 
+            <i class="fa fa-home fa-lg"></i> 
+          </a>
+        </li>
+        <li{% if page.slug == "gettingstarted" %} class="active"{% endif %}> 
+          <a href="{{ page.base_url }}gettingstarted.html">
+            Overview
+          </a>
+        </li>
+        <li{% if page.slug == "documentation" %} class="active"{% endif %}> 
+          <a href="{{ page.base_url }}documentation.html">
+            Documentation
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/SMSG-MAC-DEV/MacPatch">
+            <i class="fa fa-github fa-lg"></i> 
+          </a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!-- <li{% if page.slug == "about" %} class="active"{% endif %}><a href="{{ page.base_url }}about.html">About</a></li>
