Changed documentation nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,7 +23,7 @@
           </a>
         </li>
         <li{% if page.slug == "documentation" %} class="active"{% endif %}> 
-          <a href="{{ page.base_url }}documentation.html">
+          <a href="{{ page.base_url }}documentation/quickstart-osx.html">
             Documentation
           </a>
         </li>
