--- a/_includes/documentation-sidenav.html
+++ b/_includes/documentation-sidenav.html
@@ -1,8 +1,13 @@
 <!-- Sidebar navbar for Documentation pages -->
 <ul class="nav nav-sidebar">
-  <li><a href="{{ page.base_url }}documentation/quickstart-osx.html">Quick Start - OSX</a></li>
-  <li><a href="{{ page.base_url }}documentation/quickstart-linux.html">Quick Start - Linux</a></li>
-  <li><a href="{{ page.base_url }}documentation/building-the-client.html">Building The Client</a></li>
-  <li><a href="{{ page.base_url }}documentation/custom-patch-content.html">Custom Patch Content</a></li>
-  <li><a href="{{ page.base_url }}documentation/install-distribution-server.html">Install Distribution Server</a></li>
+  <li{% if page.side_nav == "quickstart-osx" %} class="active"{% endif %}>
+    <a href="{{ page.base_url }}documentation/quickstart-osx.html">Quick Start - OSX</a></li>
+  <li{% if page.side_nav == "quickstart-linux" %} class="active"{% endif %}>
+    <a href="{{ page.base_url }}documentation/quickstart-linux.html">Quick Start - Linux</a></li>
+  <li{% if page.side_nav == "building-the-client" %} class="active"{% endif %}>
+    <a href="{{ page.base_url }}documentation/building-the-client.html">Building The Client</a></li>
+  <li{% if page.side_nav == "ustom-patch-content" %} class="active"{% endif %}>
+    <a href="{{ page.base_url }}documentation/custom-patch-content.html">Custom Patch Content</a></li>
+  <li{% if page.side_nav == "install-distribution-server" %} class="active"{% endif %}>
+    <a href="{{ page.base_url }}documentation/install-distribution-server.html">Install Distribution Server</a></li>
 </ul>
