--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,8 +17,8 @@
             <i class="fa fa-home fa-lg"></i> 
           </a>
         </li>
-        <li{% if page.slug == "gettingstarted" %} class="active"{% endif %}> 
-          <a href="{{ page.base_url }}gettingstarted.html">
+        <li{% if page.slug == "overview" %} class="active"{% endif %}> 
+          <a href="{{ page.base_url }}overview.html">
             Overview
           </a>
         </li>
