cleanup and new doc page for ldap

--- a/_includes/documentation-sidenav.html
+++ b/_includes/documentation-sidenav.html
@@ -4,6 +4,8 @@
     <a href="{{ page.base_url }}documentation/quickstart-osx.html">Quick Start - OSX</a></li>
   <li{% if page.side_nav == "quickstart-linux" %} class="active"{% endif %}>
     <a href="{{ page.base_url }}documentation/quickstart-linux.html">Quick Start - Linux</a></li>
+  <li{% if page.side_nav == "ldap-configuration" %} class="active"{% endif %}>
+    <a href="{{ page.base_url }}documentation/ldap-configuration.html">LDAP/AD Configuration</a></li>
   <li{% if page.side_nav == "building-the-client" %} class="active"{% endif %}>
     <a href="{{ page.base_url }}documentation/building-the-client.html">Building The Client</a></li>
   <li{% if page.side_nav == "ustom-patch-content" %} class="active"{% endif %}>
