changed name of vagrant nav entry

--- a/_includes/documentation-sidenav.html
+++ b/_includes/documentation-sidenav.html
@@ -7,7 +7,7 @@
     <a href="{{ page.base_url }}documentation/quickstart-linux.html">Quick Start - Linux</a></li>
 
   <li{% if page.side_nav == "vagrant" %} class="active"{% endif %}>
-    <a href="{{ page.base_url }}documentation/vagrant.html">Vagrant</a></li>
+    <a href="{{ page.base_url }}documentation/vagrant.html">Using Vagrant</a></li>
   
   <li{% if page.side_nav == "ldap-configuration" %} class="active"{% endif %}>
     <a href="{{ page.base_url }}documentation/ldap-configuration.html">LDAP/AD Configuration</a></li>
